.metadata/.plugins/org.eclipse.cdt.ui/House_test.build.log
19:18:03 **** Incremental Build of configuration Debug for project House_test ****
make all 
Building file: ../src/Floor.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Floor.d" -MT"src/Floor.d" -o "src/Floor.o" "../src/Floor.cpp"
../src/Floor.cpp: In constructor ‘Floor::Floor(std::string)’:
../src/Floor.cpp:26:2: error: class ‘Floor’ does not have any field named ‘Name’
 :Name(_name)
  ^
../src/Floor.cpp: At global scope:
../src/Floor.cpp:31:1: error: redefinition of ‘Floor::~Floor()’
 Floor::~Floor()
 ^
In file included from ../src/Floor.cpp:7:0:
../src/Floor.h:25:15: note: ‘virtual Floor::~Floor()’ previously defined here
       virtual ~Floor(){}
               ^
../src/Floor.cpp: In member function ‘virtual unsigned int Floor::getNumberOfRooms() const’:
../src/Floor.cpp:42:11: error: ‘RoomList’ was not declared in this scope
    return RoomList.size();
           ^
../src/Floor.cpp: In member function ‘virtual void Floor::addRoom(const Room&)’:
../src/Floor.cpp:51:4: error: ‘RoomList’ was not declared in this scope
    RoomList.push_back(_Room);
    ^
../src/Floor.cpp: In member function ‘virtual const Room& Floor::getRoom(std::string) const’:
../src/Floor.cpp:56:27: error: ‘RoomList’ was not declared in this scope
    for (const Room& room: RoomList)
                           ^
../src/Floor.cpp:58:40: error: invalid use of incomplete type ‘const class Room’
       if(boost::algorithm::iequals(room.Name, name))
                                        ^
In file included from ../src/Floor.cpp:7:0:
../src/Floor.h:15:7: error: forward declaration of ‘const class Room’
 class Room;
       ^
../src/Floor.cpp: In member function ‘virtual unsigned int Floor::getNumberOfRooms() const’:
../src/Floor.cpp:43:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
src/subdir.mk:24: recipe for target 'src/Floor.o' failed
make: *** [src/Floor.o] Error 1

19:18:05 Build Finished (took 2s.556ms)

